--- a/frontend/blockchain/package.json
+++ b/frontend/blockchain/package.json
@@ -4,32 +4,33 @@
     "version": "0.0.0",
     "type": "commonjs",
     "scripts": {
-      "dev": "vite",
-      "build": "vite build",
-      "lint": "eslint .",
-      "preview": "vite preview"
+        "dev": "vite",
+        "build": "vite build",
+        "lint": "eslint .",
+        "preview": "vite preview"
     },
     "dependencies": {
-      "@splinetool/react-spline": "^4.0.0",
-      "@tailwindcss/vite": "^4.0.15",
-      "axios": "^1.8.4",
-      "react": "^19.0.0",
-      "react-dom": "^19.0.0",
-      "react-router-dom": "^7.4.0",
-      "react-webcam": "^7.2.0",
-      "tailwindcss": "^4.0.15",
-      "webcam-easy": "^1.1.1"
+        "@splinetool/react-spline": "^4.0.0",
+        "@tailwindcss/vite": "^4.0.15",
+        "@truffle/hdwallet-provider": "^2.1.15",
+        "axios": "^1.8.4",
+        "dotenv": "^16.4.7",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0",
+        "react-router-dom": "^7.4.0",
+        "react-webcam": "^7.2.0",
+        "tailwindcss": "^4.0.15",
+        "webcam-easy": "^1.1.1"
     },
     "devDependencies": {
-      "@eslint/js": "^9.21.0",
-      "@types/react": "^19.0.10",
-      "@types/react-dom": "^19.0.4",
-      "@vitejs/plugin-react": "^4.3.4",
-      "eslint": "^9.21.0",
-      "eslint-plugin-react-hooks": "^5.1.0",
-      "eslint-plugin-react-refresh": "^0.4.19",
-      "globals": "^15.15.0",
-      "vite": "^6.2.0"
+        "@eslint/js": "^9.21.0",
+        "@types/react": "^19.0.10",
+        "@types/react-dom": "^19.0.4",
+        "@vitejs/plugin-react": "^4.3.4",
+        "eslint": "^9.21.0",
+        "eslint-plugin-react-hooks": "^5.1.0",
+        "eslint-plugin-react-refresh": "^0.4.19",
+        "globals": "^15.15.0",
+        "vite": "^6.2.0"
     }
-  }
-  
+}
